# confsweeper

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
docs/: 20260619_project_status.md  concerted_moves_v0_3_plan.md  cremp_pretraining_dataset_audit.md  dihedral_kick_plan.md  dihedral_kick_v0_2_plan.md  dihedral_predictor_plan.md  exhaustive_etkdg_plan.md  mcmm_plan.md  mmff_crest_inversion_plan.md  sidechain_rotamer_plan.md
scripts/: README.md  _probe_distribution.py  _probe_seed_from_conf0.py  _probe_seeding.py  add_predicted_backbone.py  aggregate_seeding_coverage.py  analyze_basin_sdf.py  before_after_coverage_figure.py  broaden_coverage_figure.py  build_dihedral_dataset.py  cremp_collapse_test.py  cremp_overlap_figure.py  etkdg_saturation_figure.py  inversion_prescreen.py  mace_vs_xtb.py  mcmm_cartoons.py  mcmm_pymol_render.py  mcmm_pymol_structures.py  minimize_ablation.py  resplit_topology.py  sample_cremp_peptides.py  sampler_benchmark.py  saturation_etkdg.py  sidechain_floppiness.py  sweep_broaden_etkdg_vs_mc.sh  sweep_dihedral_model.py  sweep_step7.sh  sweep_step7_phase2.sh  sweep_step7_rerun_3_4.sh  sweep_v0_2_step4.sh  sweep_v0_2_step4_recover.sh  sweep_v0_2_step7.sh  sweep_v0_3_combo_probe.sh  sweep_v0_3_move_b.sh  sweep_v0_3_move_c.sh  sweep_v0_3_step4.sh  train_chi_predictor.py  train_dihedral_predictor.py  union_basin_count.py  v0_2_coverage_figure.py  (+2 more)
src/: README.md  concerted_rotation.py  confsweeper.py  geom_drugs.py  mcmm.py  proposers.py  torsional_sampling.py  utils.py
tests/: peptides.csv  peptides_uuids.csv  test_confsweeper.py  (+13 more)
(+19 files in other folders)
