[project]
authors = [{name = "Sabari Kumar", email = "sabarinkumar@gmail.com"}]
name = "confsweeper"
version = "0.0.1"
requires-python = ">=3.11"

[project.optional-dependencies]
mace = ["mace-torch>=0.3.14,<0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
